Version 1.4.0:
- Using OpenSSL is discouraged and may not be supported in the future.
  Please consider using GnuTLS instead.
- As using GNU SASL is most likely unnecessary, it is disabled by default now.
  Since everything uses TLS nowadays, you really only need it for GSSAPI and
  NTLM authentication. If you never heard of those, consider yourself lucky ;)

Version 1.2.8:
- Fix support for ~/.config/mpop/config as configuration file
- Add --source-ip option and source_ip command to bind the outgoing connection
  to a specific source IP address.
- Enable SNI for TLS

Version 1.2.7:
- Add support for ~/.config/mpop/config as configuration file
- Add network timeout handling on Windows
- Fix command line handling of SHA256 TLS fingerprints
- Update german translation

Version 1.2.6:
- Return better error code when one or more accounts fail.

Version 1.2.5:
- Support SHA256 fingerprints for tls_fingerprint, and mark both SHA1 and MD5 as
  deprecated.

Version 1.2.4:
- The system default policy is used with GnuTLS instead of a hardcoded one.

Version 1.2.3:
- A bug in SOCKS support was fixed.
- Handling non-fatal errors in TLS handshakes was fixed.

Version 1.2.2:
- No significant changes.

Version 1.2.1:
- The new configure option --with-tls replaces --with-ssl.
- A new configure option --disable-gai-idn was added.

Version 1.2.0:
- Support for SOCKS proxies was added. This allows mpop to be used with Tor.
- GNOME Keyring support now uses libsecret instead of libgnome-keyring. It is
  now documented how to use secret-tool to manage passwords for mpop; the
  obsolete mpop-gnome-tool script is removed.
- Configuration file security is now only checked if the file actually contains
  secrets such as passwords. (If you still store passwords in the configuration
  file, consider using the passwordeval command or a key ring instead.)
- The GSSAPI authentication method is not chosen automatically anymore, you have
  to request it manually if you really want to use it.