@@ -4,6 +4,8 @@ Version 1.4.0:
 - As using GNU SASL is most likely unnecessary, it is disabled by default now.
   Since everything uses TLS nowadays, you really only need it for GSSAPI and
   NTLM authentication. If you never heard of those, consider yourself lucky ;)
+- If your system requires a library for IDN support, libidn2 is now used instead
+  of the older libidn.
 
 Version 1.2.8:
 - Fix support for ~/.config/mpop/config as configuration file
